--- a/intro_rpkg_lyu.rmd
+++ b/intro_rpkg_lyu.rmd
@@ -11,6 +11,9 @@ output:
       countIncrementalSlides: false
       ratio: "16:9"
 ---
+background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_title_bg3.png")
+background-position: center
+background-size: contain
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE,
@@ -50,23 +53,26 @@ font-family: 'Inconsolata', 'Consolas', Monaco, monospace;
 
 ## Content
 
-.left-column[
-```{r pkgs_lyu,echo=FALSE,out.width="80%",out.height="50%"}
+.pull-left[
+
+### **Geospatial Data of China**
+- [geocn](https://stscl.github.io/geocn/)
+
+### **Geospatial Processing**
+- [qgisprocess](https://r-spatial.github.io/qgisprocess/)
+- [Rsagacmd](https://stevenpawley.github.io/Rsagacmd/)
+
+### **Geospatial Methods**
+- [sdsfun](https://stscl.github.io/sdsfun/)
+- [gdverse](https://ausgis.github.io/gdverse/)
+- [geocomplexity](https://ausgis.github.io/geocomplexity/)
+
+]
+
+.pull-right[
+```{r pkgs_lyu,echo=FALSE,out.width="90%",out.height="60%"}
 knitr::include_graphics('./assets/pkgs_lyu.png')
 ```
-]
-.right-column[
-
-- Geospatial Data of China
-> [geocn](https://stscl.github.io/geocn/)
-- Geospatial Processing
-> [qgisprocess](https://r-spatial.github.io/qgisprocess/)
-> [Rsagacmd](https://stevenpawley.github.io/Rsagacmd/)
-- Geospatial Methods
-> [sdsfun](https://stscl.github.io/sdsfun/)
-> [gdverse](https://ausgis.github.io/gdverse/)
-> [geocomplexity](https://ausgis.github.io/geocomplexity/)
-
 ]
 
 ---
