--- a/intro_rpkg_lyu.rmd
+++ b/intro_rpkg_lyu.rmd
@@ -65,25 +65,25 @@ background-size: contain
 
 .pull-left[
 
-[<span style="color: #4472c4;display: block;margin-top: 70px;"> Geocomputation with R </span>](https://r.geocompx.org/)
+[<span style="color: #5b7b75;display: block;margin-top: 150px;"> Geocomputation with R </span>](https://r.geocompx.org/)
 
-[<span style="color: #4472c4;"> Spatial Data Science
+[<span style="color: #5b7b75;"> Spatial Data Science
 With Applications in R </span>](https://r-spatial.org/book/)
 
-[<span style="color: #4472c4;"> Spatial data with terra </span>](https://rspatial.org/spatial/index.html)
+[<span style="color: #5b7b75;"> Spatial data with terra </span>](https://rspatial.org/spatial/index.html)
 
-[<span style="color: #4472c4;"> Introduction to BaseR </span>](https://rspatial.org/intr/)
+[<span style="color: #5b7b75;"> Introduction to BaseR </span>](https://rspatial.org/intr/)
 
-[<span style="color: #4472c4;"> Advanced R </span>](https://adv-r.hadley.nz/)
+[<span style="color: #5b7b75;"> Advanced R </span>](https://adv-r.hadley.nz/)
 
-[<span style="color: #4472c4;"> R for Data Science (2e) & tidyverse </span>](https://r4ds.hadley.nz/)
+[<span style="color: #5b7b75;"> R for Data Science (2e) & tidyverse </span>](https://r4ds.hadley.nz/)
 
-[<span style="color: #4472c4;"> Unofficial Rcpp Api Documentation </span>](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
+[<span style="color: #5b7b75;"> Unofficial Rcpp Api Documentation </span>](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
 
+]
 
-
-
-
+.pull-right[
+For the full version of resource recommendations, please refer to [my blog](https://spatlyu.github.io/posts/r-books/).
 ]
 
 ---
