--- a/intro_rpkg_lyu.rmd
+++ b/intro_rpkg_lyu.rmd
@@ -63,27 +63,45 @@ background-image: url("https://spatlyu.github.io/materials/figures/ausgis_ppt_ti
 background-position: center
 background-size: contain
 
+--
+
 .pull-left[
 
-[<span style="color: #5b7b75;display: block;margin-top: 150px;"> Geocomputation with R </span>](https://r.geocompx.org/)
+--
 
-[<span style="color: #5b7b75;"> Spatial Data Science
+#### [<span style="color: #5b7b75;display: block;margin-top: 120px;"> Geocomputation with R </span>](https://r.geocompx.org/)
+
+--
+
+#### [<span style="color: #5b7b75;"> Spatial Data Science
 With Applications in R </span>](https://r-spatial.org/book/)
 
-[<span style="color: #5b7b75;"> Spatial data with terra </span>](https://rspatial.org/spatial/index.html)
+--
 
-[<span style="color: #5b7b75;"> Introduction to BaseR </span>](https://rspatial.org/intr/)
+#### [<span style="color: #5b7b75;"> Spatial data with terra </span>](https://rspatial.org/spatial/index.html)
 
-[<span style="color: #5b7b75;"> Advanced R </span>](https://adv-r.hadley.nz/)
+--
 
-[<span style="color: #5b7b75;"> R for Data Science (2e) & tidyverse </span>](https://r4ds.hadley.nz/)
+#### [<span style="color: #5b7b75;"> Introduction to BaseR </span>](https://rspatial.org/intr/)
 
-[<span style="color: #5b7b75;"> Unofficial Rcpp Api Documentation </span>](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
+--
+
+#### [<span style="color: #5b7b75;"> Advanced R </span>](https://adv-r.hadley.nz/)
+
+--
+
+#### [<span style="color: #5b7b75;"> R for Data Science (2e) & tidyverse </span>](https://r4ds.hadley.nz/)
+
+--
+
+#### [<span style="color: #5b7b75;"> Unofficial Rcpp Api Documentation </span>](https://thecoatlessprofessor.com/programming/cpp/unofficial-rcpp-api-documentation/)
 
 ]
 
+--
+
 .pull-right[
-For the full version of resource recommendations, please refer to [my blog](https://spatlyu.github.io/posts/r-books/).
+## <span style="display: block;margin-top: 150px;">For the full version of resource recommendations, please refer to [my blog](https://spatlyu.github.io/posts/r-books/).</span>
 ]
 
 ---
