--- a/intro_rpkg_lyu.rmd
+++ b/intro_rpkg_lyu.rmd
@@ -50,6 +50,13 @@ font-family: 'Inconsolata', 'Consolas', Monaco, monospace;
   background-size: contain;
 }
 
+.pull-left {
+ margin-top: 20px;
+}
+.pull-right {
+ margin-top: 20px;
+}
+
 .pre {
       background-color: #ddd;
       border: 5px solid #ddd;
@@ -100,7 +107,9 @@ background-size: contain
 --
 
 .pull-right[
-## <span style="display: block;margin-top: 150px;">For the full version of resource recommendations, please refer to [my blog](https://spatlyu.github.io/posts/r-books/).</span>
+<span style="display: block;margin-top: 150px;">
+## For the full version of resource recommendations, please refer to [my blog](https://spatlyu.github.io/posts/r-books/).
+</span>
 ]
 
 ---
@@ -338,18 +347,6 @@ wt4 = spdep_distance_swm(pts, k = 3, kernel = 'gaussian', bandwidth = 10000)
 wt4[1:5,1:5]
 ```
 
-<!-- <div style="margin-top: 70px;"> -->
-<!-- <pre><code> -->
-<!-- library(sf) -->
-<!-- library(sdsfun) -->
-<!-- pts = read_sf(system.file('extdata/pts.gpkg',package = 'sdsfun')) -->
-
-<!-- wt1 = spdep_distance_swm(pts, style = 'B') -->
-<!-- wt2 = spdep_distance_swm(pts, kernel = 'gaussian') -->
-<!-- wt3 = spdep_distance_swm(pts, k = 3, kernel = 'gaussian') -->
-<!-- wt4 = spdep_distance_swm(pts, k = 3, kernel = 'gaussian', bandwidth = 10000) -->
-<!-- </code></pre> -->
-<!-- </div> -->
 ]
 
 --
@@ -367,19 +364,6 @@ wt3 = spdep_contiguity_swm(pts, queen = FALSE, order = 2, style = 'B')
 wt3[1:5,1:5]
 ```
 
-
-<!-- <div style="margin-top: 70px;"> -->
-
-<!-- <pre><code> -->
-<!-- library(sf) -->
-<!-- library(sdsfun) -->
-<!-- pts = read_sf(system.file('extdata/pts.gpkg',package = 'sdsfun')) -->
-
-<!-- wt1 = spdep_contiguity_swm(pts, k = 6, style = 'B') -->
-<!-- wt2 = spdep_contiguity_swm(pts, queen = TRUE, style = 'B') -->
-<!-- wt3 = spdep_contiguity_swm(pts, queen = FALSE, order = 2, style = 'B') -->
-<!-- </code></pre> -->
-
 ]
 
 ---
@@ -391,14 +375,13 @@ background-size: contain
 
 .pull-left[
 
-## <span style="color: ##5b7b75;display: block;margin-top: 60px;"> [gdverse](https://ausgis.github.io/gdverse/)</span>
+## <span style="color: #5b7b75;display: block;margin-top: 60px;"> [gdverse](https://ausgis.github.io/gdverse/) </span>
 
 #### Geographical Detector Models
 
 ```{r}
 library(gdverse)
 gozh.bi = gozh(NDVIchange ~ ., data = ndvi, type = 'interaction')
-gozh.bi
 ```
 
 ]
